# LEC-Compiler

./: .gitignore  CMakeLists.txt  Definitions.txt  Makefile  lecc  main.cpp  test.lec
ast/: AST.cpp  AST.h  ASTNode.h  KernelObjects.h  Makefile  NodeAssignament.h  NodeBinaryOperator.cpp  NodeBinaryOperator.h  NodeBlock.cpp  NodeBlock.h  NodeExpresion.h  NodeFunctionCall.h  NodeFunctionDeclaration.h  NodeVariableDeclaration.h
doc/: Definitions.txt  ToDo
execengine/: Bytecode.cpp  Bytecode.h  ExecEngine.cpp  ExecEngine.h  KernelObjects.cpp  KernelObjects.h  Makefile
execengine/kernelobjects/: Boolean.cpp  Boolean.h  Character.cpp  Character.h  Class.cpp  Class.h  Decimal.cpp  Decimal.h  DynamicObject.cpp  DynamicObject.h  Integer.cpp  Integer.h  Object.cpp  Object.h  Routine.cpp  Routine.h  String.cpp  String.h
parser/: Makefile  parser.cpp  parser.hpp  parser.output  parser.y  scanner.cpp  scanner.l  win_gen.bat  win_parser.cpp  win_parser.hpp  win_scanner.cpp  wingen.bat
vs/LEC/: LEC.sln  LEC.vcxproj
